base/api-base.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: api-base
  namespace: namespace-id
  labels:
    app: api-base
    kube-monkey/enabled: enabled
    kube-monkey/identifier: api-base
    kube-monkey/mtbf: '1'
    kube-monkey/kill-mode: "random-max-percent"
    kube-monkey/kill-value: '75'
spec:
  replicas: 4
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: api-base
  template:
    metadata:
      labels:
        app: api-base
        kube-monkey/enabled: enabled
        kube-monkey/identifier: api-base
      annotations:
        ad.datadoghq.com/api-base.check_names: '["http_check"]'
        ad.datadoghq.com/api-base.init_configs: '[{}]'
        ad.datadoghq.com/api-base.instances: '[{"name": "api-base","url": "https://api-base-namespace-id.engagedtechnologies.com/swagger/index.html","timeout": 1,"disable_ssl_validation": false,"http_response_status_code": 200}]'
    spec:
      containers:
      - name: api-base
        image: docker.engagedtechnologies.com/api-base:version
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /healthz
            port: 5000
          initialDelaySeconds: 90
          timeoutSeconds: 5
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 5
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /healthz
            port: 5000
          initialDelaySeconds: 60
          timeoutSeconds: 5
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 5
      imagePullSecrets:
      - name: engdockercfg
---
kind: Service
apiVersion: v1
metadata:
  name: api-base
  namespace: namespace-id
spec:
  selector:
    app: api-base
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-base
  namespace: namespace-id
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - api-base-namespace-id.engagedtechnologies.com
    secretName: wildcard-tls
  rules:
  - host: api-base-namespace-id.engagedtechnologies.com
    http:
      paths:
      - path: /
        backend:
          serviceName: api-base
          servicePort: 5000
